# sis_scraper

./: .gitignore  .replit  README.md  flask_app.py  pyproject.toml  requirements.txt  sample.py
manager/: createChart.py  firestore.py  scraper.py
manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
